--- a/client/Android/app/src/main/res/values-night/themes.xml
+++ b/client/Android/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,8 @@
     <style name="Base.Theme.Pong" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:statusBarColor">#000000</item>
+        <item name="colorPrimary">#000000</item>
+        <item name="colorSecondary">#FFFFFF</item>
     </style>
 </resources>
