--- a/client/Android/app/src/main/res/values/themes.xml
+++ b/client/Android/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
     <style name="Base.Theme.Pong" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">#000000</item>
+        <item name="colorPrimary">#FFFFFF</item>
+        <item name="colorSecondary">#000000</item>
     </style>
 
     <style name="Theme.Pong" parent="Base.Theme.Pong" />
