Added chat system (pfp, name, last message); Added side bar(panel)(menu); Added BASE ui (i cant make a usable ui, sry)

--- a/client/Android/app/src/main/res/values/themes.xml
+++ b/client/Android/app/src/main/res/values/themes.xml
@@ -6,6 +6,9 @@
         <item name="android:statusBarColor">#000000</item>
         <item name="colorPrimary">#FFFFFF</item>
         <item name="colorSecondary">#000000</item>
+
+        <item name="colorPrimaryVariant">#CDCDCD</item>
+        <item name="colorSecondaryVariant">#FFFFFF</item>
     </style>
 
     <style name="Theme.Pong" parent="Base.Theme.Pong" />
