--- a/client/Android/app/src/main/res/layout/item_chat.xml
+++ b/client/Android/app/src/main/res/layout/item_chat.xml
@@ -22,7 +22,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Chat Name"
-        android:textSize="20sp"
+        android:fontFamily="@font/vcr_osd"
+        android:textSize="23sp"
         android:textColor="?attr/colorSecondary"
         android:layout_marginStart="15dp"
         app:layout_constraintStart_toEndOf="@id/chatAvatar"
@@ -34,7 +35,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Last message preview..."
-        android:textSize="14sp"
+        android:fontFamily="@font/vcr_osd"
+        android:textSize="13sp"
         android:textColor="?attr/colorSecondary"
         android:layout_marginStart="15dp"
         app:layout_constraintStart_toEndOf="@id/chatAvatar"
